--- a/spider-admin/guns-admin/src/main/webapp/WEB-INF/view/system/template/template_conf.html
+++ b/spider-admin/guns-admin/src/main/webapp/WEB-INF/view/system/template/template_conf.html
@@ -42,22 +42,15 @@
 		<div class="ibox float-e-margins">
 			<div class="ibox-title" style="position: relative;">
 				<h5>模板配置</h5>
-				<button type="button" class="btn btn-success" style="position: absolute;right: 10px;top: 5px;">新建</button>
+				<button type="button" class="btn btn-success" style="position: absolute;right: 10px;top: 5px;" onclick="TemplateMgr.openTemplatelistLink()">返回</button>
 			</div>
 			<div class="ibox-content">
 				<div class="row row-lg">
 					<div class="col-sm-12">
 						<div class="row">
-							<div class="col-lg-2 col-sm-3">
-								<div class="panel panel-default">
-									<div class="panel-heading">模板列表</div>
-									<div class="list-group" id="template_list">
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-10 col-sm-9">
+							<div class="col-lg-12 col-sm-12">
 								<form class="form-horizontal">
-									<input type="hidden" class="form-control" id="id" name="id">
+									<input type="hidden" class="form-control" id="id" name="id" value="${templateId}">
 									<div class="form-group">
 										<label for="name" class="col-lg-1 col-sm-2 control-label">名称</label>
 										<div class="col-lg-11 col-sm-10">
@@ -122,5 +115,5 @@
 		</div>
 	</div>
 </div>
-<script src="${ctxPath}/static/modular/system/template/template.js"></script>
+<script src="${ctxPath}/static/modular/system/template/templateConf.js"></script>
 @}
